--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,10 @@ jobs:
         - docker push ${DOCKERHUB_LIVE}:amd64-latest
         - docker push ${DOCKERHUB_LIVE}:arm32v6-latest
         - docker push ${DOCKERHUB_LIVE}:arm64v8-latest
-        # Generate local manifests for dev and at commit
+        # Generate local manifests for latest and at commit
         - docker manifest create ${DOCKERHUB_LIVE}:latest ${DOCKERHUB_LIVE}:amd64-latest ${DOCKERHUB_LIVE}:arm32v6-latest ${DOCKERHUB_LIVE}:arm64v8-latest
-        - docker manifest annotate ${DOCKERHUB_LIVE}:dev ${DOCKERHUB_LIVE}:arm32v6-latest --os linux --arch arm
-        - docker manifest annotate ${DOCKERHUB_LIVE}:dev ${DOCKERHUB_LIVE}:arm64v8-latest --os linux --arch arm64 --variant armv8
+        - docker manifest annotate ${DOCKERHUB_LIVE}:latest ${DOCKERHUB_LIVE}:arm32v6-latest --os linux --arch arm
+        - docker manifest annotate ${DOCKERHUB_LIVE}:latest ${DOCKERHUB_LIVE}:arm64v8-latest --os linux --arch arm64 --variant armv8
         - docker manifest create ${DOCKERHUB_LIVE}:${TRAVIS_COMMIT} ${DOCKERHUB_LIVE}:amd64-${TRAVIS_COMMIT} ${DOCKERHUB_LIVE}:arm32v6-${TRAVIS_COMMIT} ${DOCKERHUB_LIVE}:arm64v8-${TRAVIS_COMMIT}
         - docker manifest annotate ${DOCKERHUB_LIVE}:${TRAVIS_COMMIT} ${DOCKERHUB_LIVE}:arm32v6-${TRAVIS_COMMIT} --os linux --arch arm
         - docker manifest annotate ${DOCKERHUB_LIVE}:${TRAVIS_COMMIT} ${DOCKERHUB_LIVE}:arm64v8-${TRAVIS_COMMIT} --os linux --arch arm64 --variant armv8
